@@ -632,6 +632,7 @@ John Interrante
 Bob Ippolito
 Roger Irwin
 Atsuo Ishimoto
+Kasia Jachim
 Adam Jackson
 Ben Jackson
 Paul Jackson
